Fix small viewport button label alignment

--- a/foundation_cms/static/scss/components/newsletter_signup/newsletter_signup_form.scss
+++ b/foundation_cms/static/scss/components/newsletter_signup/newsletter_signup_form.scss
@@ -152,6 +152,7 @@
     width: 100%;
     line-height: 150%;
     text-wrap: nowrap;
+    justify-content: center;
 
     &:focus-visible {
       outline: 2px solid $white;
